[package]
name = "events-test-listener"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ctrlc = { version = "3.0", features = ["termination"] }
websocket = { version = "0.26.2" }
serde = { version = "1.0.125", features = ["derive"] }
serde_bytes = { version = "0.11.5" }
serde_json = { version = "1.0.64" }

tokio = { version = "0.2", features = ["full"] }

log = { version = "0.4.14" }
flexi_logger = { version = "0.18.0" }
#mda = { path = "../../algo/mda", version = "0.1.0", features = ["client"]}
#framework = { path = "../../framework", version = "0.1.0", features = ["discovery"] }
bs58 = { version = "0.3.1" }
rand = "0.7.3"
shellexpand = "2.1.0"
anchor-client = { version = "0.11.1"  }
anchor-lang = { version = "0.11.1" }
anyhow = "1.0.32"
regex = "1.4.5"
solana-client = "1.7.2"
solana-sdk = "1.7.2"
thiserror = "1.0.20"
url = "2.2.2"

events-test = { path = "../events-test-producer/programs/events-test", features = ["no-entrypoint"] }
